# jarchive

./: .gitignore  README.md  dub.json  meson.build  test.d
docs/: format v1.txt
include/c/jarchive/: chunkhandler.h  enums.h  reader.h
include/jarchive/: binarystream.h  common.h  writer.h
source/jarchive/: binarystream.d  bits.d  chunkhandler.d  enums.d  lzma.d  memory.d  package.d  reader.d  results.d  writer.d
